--- a/alpha.css
+++ b/alpha.css
@@ -1,10 +1,47 @@
-.alpha-gif {
-    position: fixed;
-    top: 20px;
-    right: 20px;
+* {
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-body {
-    background-color: #FFDBBB;
+h1, 
+h2 {
+    color: #FF0000;
+    text-align: center;
+}
+
+.gif-container {
+    display: flex;
+    justify-content: center; /* Centers horizontally */
+    align-items: center; /* Centers vertically */
+}
+
+.container {
+    display: flex;
+    flex-wrap: nowrap;
+    margin: 4rem;
+    column-gap: 60px;
+}
+
+.box {
+    flex: 1;
+    background-color: #cdcdcd;
+    border-radius: 8px; /* Slightly larger border radius */
+    padding: 15px 30px 30px 30px;
+    margin: -0.75rem;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Add a subtle shadow for depth */
+}
+
+.alpha-gif {
+    justify-content: center; /* Centers the GIF horizontally */
+}
+
+.black-text {
+    color: black;
+}
+
+@media screen and (max-width: 912px) {
+    .container {
+        flex-direction: column;
+        row-gap: 70px;
+    }
 }
 
