--- a/alpha.css
+++ b/alpha.css
@@ -45,7 +45,7 @@ h2 {
     display: flex;
     justify-content: center; 
     align-items: center; 
-    padding-top: 20px;
+    padding: 20px;
 }
 
 /* boxes */
