--- a/alpha.css
+++ b/alpha.css
@@ -189,6 +189,7 @@ h4 {
     font-size: 12px;
     color: #666;
     text-align: left; 
+    margin-left: 6px;
 }
 
 .mutual-connections img {
@@ -214,19 +215,15 @@ h4 {
 
 .connect-button:hover {
     background-color: #eef7fc;
-    color: rgba(0, 115, 177, 0.75); /* Darken text color by 25% */
-    border-color: rgba(0, 115, 177, 0.75); /* Darken border color by 25% */
+    color: rgba(0, 115, 177, 0.75); 
+    border-color: rgba(0, 115, 177, 0.75); 
 }
 
-.connect-button.active {
-    background-color: #d0e5f2; /* Slightly darker background on mouse down */
-    color: #005682; /* Darken text color even more */
-    border-color: #005682; /* Darken border color even more */
-    font-weight: bold; /* Ensure font weight remains bold */
+.connect-button:active {
+    background-color: #e7edf1; 
+    color: #0c0d0e; 
+    border-color: #0c0d0e; 
+    font-weight: bold; 
 }
 
-.connect-button.pending {
-    background-color: #333; /* Dark gray background */
-    color: #ccc; /* Light gray text */
-    border-color: #ccc; /* Light gray border */
-}
+
