--- a/alpha.css
+++ b/alpha.css
@@ -82,6 +82,15 @@ h4 {
     transform: translateY(-50%); 
 }
 
+/* tablet sizes */
+@media screen and (min-width: 768px) and (max-width: 1024px) {
+    .container {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr); /* 2 columns */
+        grid-gap: 50px; 
+    }
+}
+
 /* mobile sizes */
 @media screen and (max-width: 912px) {
     .container {
