--- a/beta.css
+++ b/beta.css
@@ -3,24 +3,14 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 
-/* ALPHA */
-h2 {
-    flex: 1; 
-    text-align: left; 
-    color: #FF0000;
-}
-
+/* HEADER */
 .header-container {
     display: flex; 
     justify-content: space-between; 
     align-items: center;
 }
 
-.black-text {
-    color: black;
-}
-
-/* YOUTUBE */
+/* LINKEDIN */
 .alpha-logo {
     width: 150px; 
     height: auto; 
@@ -84,7 +74,7 @@ a {
 @media screen and (min-width: 768px) and (max-width: 1024px) {
     .container {
         display: grid;
-        grid-template-columns: repeat(2, 1fr); /* 2 columns */
+        grid-template-columns: repeat(2, 1fr); 
         grid-gap: 50px; 
     }
 }
@@ -96,7 +86,7 @@ a {
     }
 }
 
-/* ALHPA BUILD */
+/* ALPHA BUILD */
 .alpha-build {
     color: white; 
     display: inline-block; 
@@ -228,20 +218,58 @@ a {
     padding: 8px 16px;
     border-radius: 24px;
     cursor: pointer;
-    transition: background-color 0.3s, color 0.3s;
+    position: relative;
+    overflow: hidden; 
+    transition: border-color 0.3s; 
 }
 
-.connect-button:hover {
-    background-color: #eef7fc;
-    color: rgba(0, 115, 177, 0.75); 
-    border-color: rgba(0, 115, 177, 0.75); 
+.connect-button::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: -100%;
+    width: 100%;
+    height: 100%;
+    background-color: #D8EFFB;
+    transition: transform 0.3s ease-in-out;
+    z-index: 0; 
+    border-radius: 24px;
+}
+
+.connect-button:hover::before {
+    transform: translateX(100%); 
+}
+
+.connect-button:active::before {
+    background-color: #0273B1; 
+}
+
+.connect-button span {
+    position: relative;
+    z-index: 1; 
 }
 
 .connect-button:active {
-    background-color: #e7edf1; 
-    color: #0c0d0e; 
-    border-color: #0c0d0e; 
-    font-weight: bold; 
+    background-color: #0273B1; 
+    color: #CCE3EF;
+    border-color: #0273B1;
+    font-weight: bold;
+}
+
+.connect-button.pending {
+    background-color: white;
+    color: #0073b1;
+}
+
+.connect-button.pending::before {
+    background-color: #D8EFFB;
+    transform: translateX(-100%); 
+    transition: transform 0.6s ease-out;
+}
+
+.connect-button.pending span {
+    content: "Pending...";
+    color: #0073b1;
 }
 
 /* BETA */
