--- a/case-study.css
+++ b/case-study.css
@@ -37,6 +37,9 @@
 h3 {
     border-bottom: 3px solid #0055AA;
     width: fit-content;
+    margin-bottom: 0;
+    font-size: 20px;
+    margin-left: 20px;
 }
 
 h4 a {
@@ -51,14 +54,24 @@ p {
     padding: 10px; 
     text-align: left;
     width: 80%;
+    font-size: 18px;
+    line-height: 1.6;
+}
+
+ul {
+    text-align: center; 
+    margin-left: auto;
+    padding: 10px; 
+    text-align: left;
+    width: 80%;
+    font-size: 18px;
+    line-height: 1.6;
 }
 
 .text-container {
-    display: flex;
-    flex-direction: column;  
-    align-items: flex-start; 
-    margin: 0 auto;         
-    max-width: 900px;       
+    padding: 20px;
+    max-width: 800px;
+    margin: 0 auto;     
 }
 
 /* PERSONA */
@@ -70,5 +83,23 @@ p {
     min-width: 300px;             
     max-width: 600px;              
     height: auto; 
-    border-radius: 10px;
+    border-radius: 12px;
+    border: 3px solid #0055AA; 
+
+}
+
+/* GIFS */
+.final-gif {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 20px 0;
+}
+
+.final-gif img {
+    border-radius: 12px;
+    width: 200px;
+    max-width: 100%;
+    height: auto;
+    border: 3px solid #0055AA;
 }
