--- a/case-study.css
+++ b/case-study.css
@@ -2,44 +2,47 @@
 /* FONTS */
 * {
     font-family: Arial, Helvetica, sans-serif;
+    background-color: aliceblue;
 }
 
-/* ------------------------------------------ */
-/* HEADER */
-.header-container {
-    display: flex; 
-    justify-content: space-between; 
-    align-items: center;
-    color: white;
-}
-
-.highlight {
-    background-color: #0055AA; 
-    padding: 4px; 
-    border-radius: 4px; 
-}
-
-.final-logo {
-    width: 150px; 
-    height: auto; 
-}
-
-.logo-container {
-    display: flex;
-    justify-content: center; 
+body, html {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
 /* ------------------------------------------ */
 /* HERO */
+.hero {
+    width: 100%;
+    height: auto;
+    position: relative;
+    overflow: hidden;
+}
+
+.hero-image {
+    width: 100%; 
+    height: auto; 
+    object-fit: cover; 
+    margin-bottom: 50px; 
+    display: block;
+}
+
+@media (max-width: 580px) {
+    .hero-image {
+        height: 200px; 
+        object-fit: cover;
+        width: auto;
+    }
+}
 
 /* ------------------------------------------ */
 /* BODY */
 h3 {
     border-bottom: 3px solid #0055AA;
     width: fit-content;
-    margin-bottom: 0;
-    font-size: 20px;
-    margin-left: 20px;
+    font-size: 22px;
+    margin: 0 auto; 
 }
 
 h4 a {
