--- a/case-study.css
+++ b/case-study.css
@@ -2,7 +2,6 @@
 /* FONTS */
 * {
     font-family: Arial, Helvetica, sans-serif;
-    background-color: aliceblue;
 }
 
 body, html {
@@ -15,7 +14,6 @@ body, html {
 /* HERO */
 .hero {
     width: 100%;
-    height: auto;
     position: relative;
     overflow: hidden;
 }
@@ -31,18 +29,22 @@ body, html {
 @media (max-width: 580px) {
     .hero-image {
         height: 200px; 
-        object-fit: cover;
         width: auto;
     }
 }
 
 /* ------------------------------------------ */
-/* BODY */
+/* TEXT */
 h3 {
     border-bottom: 3px solid #0055AA;
     width: fit-content;
     font-size: 22px;
     margin: 0 auto; 
+}
+
+h4,
+h4 a {
+    font-size: 18px;
 }
 
 h4 a {
@@ -62,10 +64,7 @@ p {
 }
 
 ul {
-    text-align: center; 
     margin-left: auto;
-    padding: 10px; 
-    text-align: left;
     width: 80%;
     font-size: 18px;
     line-height: 1.6;
@@ -77,11 +76,11 @@ ul {
     margin: 0 auto;     
 }
 
+/* ------------------------------------------ */
 /* PERSONA */
 .user-persona {
     display: block;               
     margin: 0 auto;                
-    max-width: 100%;              
     width: 90%;                  
     min-width: 300px;             
     max-width: 600px;              
@@ -91,6 +90,7 @@ ul {
 
 }
 
+/* ------------------------------------------ */
 /* GIFS */
 .final-gif {
     display: flex;
